--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=Cura
 
 server.port = 8086
-spring.datasource.url= jdbc:postgresql://localhost:5432/cura
+spring.datasource.url= jdbc:postgresql://localhost:5433/cura
 spring.datasource.username=postgres
-spring.datasource.password=132004
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
